# pksensi

./: .Rbuildignore  .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  SUPPORT.html  _pkgdown.yml  appveyor.yml  authors.html  cran-comments.md  index.html  pkgdown.yml  pksensi_test.Rmd  search.json  sitemap.xml
.github/: CONTRIBUTING.md  SUPPORT.md
R/: check.R  compile.R  data.R  ggfast.R  heat_check.R  install.R  models.R  nodeplot.R  package.R  pksim.R  rfast99.R  solve_MCSim.R  solve_fun.R  solve_mcsim.R  tell2.R
articles/: index.html  pbpk_apap.html  pbtk1cpt.html
data/: APAP.rda
inst/: CITATION
inst/mod/: Makefile.am  Makefile.in  config.h  getopt.c  getopt.h  hungtype.h  lex.c  lex.h  lexerr.c  lexerr.h  lexfn.c  lexfn.h  mod.c  mod.h  modd.c  modd.h  modi.c  modi.h  modiSBML.c  modiSBML.h  modiSBML2.c  modo.c  modo.h  strutil.c  strutil.h
inst/sim/: Makefile.am  Makefile.in  delays.c  delays.h  getopt.c  getopt.h  hungtype.h  lex.c  lex.h  lexerr.c  lexerr.h  lexfn.c  lexfn.h  list.c  list.h  lsodes.h  lsodes1.c  lsodes2.c  makemcsim.in  makemcsimd.in  makemcsimp.in  makemcsims.in  matutil.c  matutil.h  matutilo.c  matutilo.h  mh.c  mh.h  modelu.c  modelu.h  modiface.h  optdsign.c  optdsign.h  random.c  random.h  sim.c  sim.h  simi.c  simi.h  siminit.c  (+9 more)
man/: APAP.Rd  FFPK.Rd  about-pksensi.Rd  check.Rd  compile.Rd  compile_model.Rd  heat_check.Rd  install_mcsim.Rd  mcsim.Rd  models.Rd  pksensi-package.Rd  pksensi.Rd  pksim.Rd  (+5 more)
(+34 files in other folders)
