bin_PROGRAMS = mod

mod_SOURCES = \
	getopt.c \
	getopt.h \
	hungtype.h \
	lex.c \
	lex.h \
	lexerr.c \
	lexerr.h \
	lexfn.c \
	lexfn.h \
	mod.c \
	mod.h \
	modd.c \
	modd.h \
	modi.c \
	modi.h \
	modiSBML.c \
	modiSBML2.c \
	modiSBML.h \
	modo.c \
	modo.h \
	strutil.c \
	strutil.h

AM_CFLAGS = -O3 -w

moddir=$(datadir)/mcsim/mod
mod_DATA = $(mod_SOURCES)
